# texet

./: .coveragerc  .dockerignore  .env.api.example  .env.db.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  WORKING_LOG.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260107_0001_create_speakers.py  654869edb0b0_add_open_conversation_unique_index.py  7017c70683d8_add_conversations_utterances.py  d24f6d70fabd_add_utterance_status.py
app/: __init__.py  auth.py  config.py  constants.py  db.py  db_ops.py  main.py  models.py  schemas.py
app/routes/: __init__.py  chat.py
app/services/: chat.py  sms.py
tests/: conftest.py  test_chat_endpoint.py  test_chat_pipeline.py  test_db_connection.py  test_db_ops_conversations.py  test_db_ops_speakers.py
