[project]
name = "texet"
version = "0.1.0"
description = "Base API scaffold for Texet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.29",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
